--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mindbox-todo",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://satriks.github.io/react_todo",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -13,6 +14,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0"
