--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://satriks.github.io/react_todo",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
